--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,17 @@ body {
     margin: 60px auto;
     width: 70%;
 }
-nav ul, footer ul {
+nav ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+
+nav{
+	border-bottom: 1px solid #d5d5d5;
+}
+
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
@@ -29,8 +34,16 @@ p {
     color: #333;
 }
 footer {
-    border-top: 1px solid #d5d5d5;
+    
     font-size: .8em;
+}
+
+footer ul{
+font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 5px 0px;
+    list-style: none;
+    font-weight: bold;
+	border-top: 1px solid #d5d5d5;
 }
 
 ul.posts { 
@@ -41,3 +54,9 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+.fieldset-auto-width {
+         display: inline-block;
+}
+
+
