--- a/template/foot.html
+++ b/template/foot.html
@@ -1,5 +1,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
-<footer>
+<footer class="footer">
     <ul>
         <li><a href="mailto:orlando.aguilar@digipen.edu">email</a></li>
         <li><a href="https://github.com/OrlandoAguilar">github.com/OrlandoAguilar</a></li>
