adding the blog and changing the main page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/Resume/Resume.html">Resume</a></li>
                         <li><a href="/Portfolio/Portfolio.html">Portfolio</a></li>
+						<li><a href="/Blog.html">Blog</a></li>
                     </ul>
                 </div>
             </div>
